<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/filename"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/filename" />

        <EditText
            android:id="@+id/inputfilename"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp" 
            android:singleLine="true"
            android:background="@android:drawable/edit_text"
            android:hint="@string/pathhint"
            android:ems="10" >
            <requestFocus />
        </EditText>

    </LinearLayout>
    
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:orientation="horizontal" >

        <TextView
            android:id="@+id/editfilemaxsize"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/filemaxsize" />

        <EditText
            android:id="@+id/inputmaxsize"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:inputType="number"
            android:singleLine="true"
            android:background="@android:drawable/edit_text"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/unit"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/unit" />


    </LinearLayout>
    
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:orientation="horizontal" >
                
	       <TextView
	            android:id="@+id/storagetext"
	            android:layout_width="200dp"
	            android:layout_height="wrap_content"
	            android:singleLine="false"
	            android:layout_marginLeft="190dp" />
    </LinearLayout>
    
      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:orientation="horizontal" >
                
	       <TextView
	            android:id="@+id/status"
	            android:layout_width="320dp"
	            android:layout_height="wrap_content"
	            android:singleLine="false"
	            android:layout_marginTop="20dp"
	            android:layout_marginLeft="190dp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            <Button
                android:id="@+id/clear"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:text="@string/clear" />
            
           <Button
                android:id="@+id/copy"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:text="@string/copy2extenal" />

            <Button
                android:id="@+id/start"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:text="@string/start" />
        </LinearLayout>

</LinearLayout>