<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:paddingLeft="10dip"
  android:paddingRight="10dip"
  android:orientation="vertical"
  >
  
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/dlg_filename" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:text="@string/copyfilename" android:layout_width="wrap_content"></TextView>
            <TextView android:id="@+id/dlg_filepath" 
            android:layout_height="wrap_content" 
            android:singleLine="true"
            android:ellipsize="start"
            android:textAppearance="?android:attr/textAppearanceMedium" 
             android:layout_width="wrap_content" 
            android:layout_marginLeft="10dip"></TextView>
        </LinearLayout>
        <ProgressBar android:id="@+id/dlg_progress" 
        	style="?android:attr/progressBarStyleHorizontal" 
        	android:layout_marginTop="10dip"
        	android:layout_marginLeft="10dip"
        	android:layout_marginRight="10dip"
        	android:layout_marginBottom="10dip"
        	android:layout_width="480dip"
        	 android:layout_height="wrap_content"
        	 ></ProgressBar>
        	 </LinearLayout>
        	 <LinearLayout 
        	 android:id="@+id/alarmLayout"
        	 android:orientation="vertical"
        	 android:layout_width="fill_parent"
        	 android:layout_height="wrap_content"
        	 >
        <TextView android:id="@+id/dlg_alarm"
         android:layout_height="wrap_content" 
         android:textAppearance="?android:attr/textAppearanceMedium" 
         android:textColor="@color/yellow"
         android:maxWidth="480dip"
         android:gravity="center_horizontal"
         android:layout_gravity="center_horizontal"
         android:text="@string/defaultalarm"
         android:maxLines="2"
         android:minLines="2"
         android:layout_width="wrap_content"></TextView>
    
    <LinearLayout android:id="@+id/dlg_layout_sure" 
    	android:layout_marginTop="10dip"
    	android:layout_marginBottom="10dip"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content">
    	<Button
    		android:id="@+id/dlg_over"
    		android:text="@string/override"
    		android:layout_height="wrap_content"
    		android:layout_width="100dip" 
    		android:layout_marginLeft="5dip"
    		/>
    	<Button
    		android:id="@+id/dlg_allover"
    		android:text="@string/alloverride"
    		android:layout_toRightOf="@id/dlg_over"
    		android:layout_height="wrap_content"
    		android:layout_width="100dip" 
    		android:layout_marginLeft="30dip"
    		/>
    	<Button
    		android:id="@+id/dlg_noover"
    		android:text="@string/noonverride"
    		android:layout_toRightOf="@id/dlg_allover"
    		android:layout_height="wrap_content"
    		android:layout_width="100dip" 
    		android:layout_marginLeft="30dip"
    		/>
    	<Button
    		android:id="@+id/dlg_allnoover"
    		android:text="@string/allnoonverride"
    		android:layout_toRightOf="@id/dlg_noover"
    		android:layout_height="wrap_content"
    		android:layout_width="100dip" 
    		android:layout_marginLeft="30dip"
    		/>
    		
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
