<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="5dip"
        android:paddingBottom="13dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip" >
    
        <TextView 
            android:id="@+id/titleText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/filename"
            android:textAppearance="?android:attr/textAppearanceMedium" />
                
        <EditText
            android:id="@+id/dl_filename"
            android:layout_height="wrap_content"
            android:layout_width="250dip"
            android:gravity="fill_horizontal"
            android:inputType="textCapSentences"
            android:selectAllOnFocus="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>
        
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#c6c3c6"
        android:minHeight="54dip"
        android:orientation="horizontal"
        android:paddingTop="4dip"
        android:paddingLeft="2dip"
        android:paddingRight="2dip" >
        <Button android:id="@+id/OK" 
            android:text="@string/yes"
            android:layout_width="0dip"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/cancel" 
            android:text="@string/no"
            android:layout_width="0dip"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content" />
        <Button android:id="@+id/back" 
            android:text="@string/BACK"
            android:layout_width="0dip"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:maxLines="2"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>

